<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>MobileAuomation</groupId>
  <artifactId>MobileAuomation</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <properties>
	  <maven.compiler.source>15</maven.compiler.source>
	  	  <maven.compiler.target>15</maven.compiler.target>
           <jvm.options>--add-opens java.base/java.lang=ALL-UNNAMED</jvm.options>
    </properties>
 
  <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>use_latest_version_from_mavencentral</version>
                <configuration>
                    <argLine>${jvm.options}</argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <dependencies>
	 <!-- https://mvnrepository.com/artifact/io.appium/java-client -->
<dependency>
    <groupId>io.appium</groupId>
    <artifactId>java-client</artifactId>
    <version>8.3.0</version>
</dependency>
<!-- https://mvnrepository.com/artifact/org.testng/testng -->
<dependency>
    <groupId>org.testng</groupId>
    <artifactId>testng</artifactId>
    <version>7.7.1</version>
    <scope>test</scope>
</dependency>





    	<dependency>
    		<groupId>com.test</groupId>
    		<artifactId>AppiumFrameworkDemo</artifactId>
    		<version>0.0.1-SNAPSHOT</version>
    	</dependency>
    </dependencies>
 
</project>